--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,14 +1,34 @@
 <html>
     <head> 
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>To-Do lists</title>
+        <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/base.css" rel="stylesheet">
     </head>
     <body>
-        <h1>{% block header_text %}{% endblock %}</h1>
-        <form method="POST" action="{% block form_action %}{% endblock %}">
-            <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-            {% csrf_token %}
-        </form>
-        {% block table %}
-        {% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 jumbotron">
+                    <div class="text-center">
+                        <h1>{% block header_text %}{% endblock %}</h1>
+                            <form method="POST" action="{% block form_action %}{% endblock %}">
+                                <input name="item_text" id="id_new_item" 
+                                    class="form-control input-lg"    
+                                    placeholder="Enter a to-do item" />
+                                 {% csrf_token %}
+                            </form>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    {% block table %}
+                    {% endblock %}
+                </div>
+            </div>
+        
+        </div>
     </body>
 </html>
